fixed scrollbar issue on non-mac browsers

--- a/src/styles/base/layout.scss
+++ b/src/styles/base/layout.scss
@@ -14,6 +14,10 @@ h1 {
 	font-weight: 200;
 }
 
+::-webkit-scrollbar { 
+    display: none; 
+}
+
 // p {
 // 	font-size: 1.25rem;
 // }
@@ -98,7 +102,7 @@ h1 {
   -webkit-box-align: baseline;
   -ms-flex-align: baseline;
           align-items: baseline;
-  overflow: hidden;
+  //overflow: hidden;
 }
 
 
